# hip-validator

./: .gitignore  Cargo.toml  README.md
src/: main.rs  utils.rs
tests/: main.rs
tests/assets/: missing_field.md  missing_fm.md  pass.md  wrong_date_format.md
